--- a/Code/PerceptronAPI/PerceptronAPI/bin/PerceptronAPI.dll.config
+++ b/Code/PerceptronAPI/PerceptronAPI/bin/PerceptronAPI.dll.config
@@ -25,8 +25,8 @@
   -->
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
-    <httpRuntime targetFramework="4.5" maxRequestLength="40960 " />
-    <!-- maxRequestLength measured in kilobytes & here its ~40MB Used for Limiting Uploading File Size-->
+    <httpRuntime targetFramework="4.5" maxRequestLength="70960 " />
+    <!-- maxRequestLength measured in kilobytes & here its ~70MB Used for Limiting Uploading File Size-->
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -37,14 +37,14 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-    <!--<sessionState mode="SQLServer" sqlConnectionString=" Integrated Security=SSPI;data source=CHIRAGH-II;" cookieless="UseCookies" cookieName="ASP.NET_SessionId"  regenerateExpiredSessionId="true" timeout="20"/>-->
+    <!--<sessionState mode="SQLServer" sqlConnectionString=" Integrated Security=SSPI;data source=CHIRAGH-I;" cookieless="UseCookies" cookieName="ASP.NET_SessionId"  regenerateExpiredSessionId="true" timeout="20"/>-->
   </system.web>
   <system.webServer>
     <!--Uploading File Size-->
     <security>
       <requestFiltering>
-        <requestLimits maxAllowedContentLength="41943040" />
-        <!-- maxAllowedContentLength measured in bytes & here its ~40MB Used for Limiting Uploading File Size-->
+        <requestLimits maxAllowedContentLength="75049040" />
+        <!-- maxAllowedContentLength measured in bytes & here its ~70MB Used for Limiting Uploading File Size-->
       </requestFiltering>
     </security>
     <validation validateIntegratedModeConfiguration="false" />
@@ -57,6 +57,14 @@
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Extensions" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.28.0" newVersion="2.2.28.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.28.0" newVersion="4.2.28.0" />
+      </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
@@ -96,8 +104,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    
-<add name="PerceptronDatabaseEntities" connectionString="metadata=res://*/Models.PerceptronDatabase.csdl|res://*/Models.PerceptronDatabase.ssdl|res://*/Models.PerceptronDatabase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Chiragh-ii;initial catalog=PerceptronDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="PerceptronDatabaseEntities" connectionString="metadata=res://*/Models.PerceptronDatabase.csdl|res://*/Models.PerceptronDatabase.ssdl|res://*/Models.PerceptronDatabase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CHIRAGH-I;initial catalog=PerceptronDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <system.webServer>
     <httpProtocol>
       <customHeaders>
