--- a/Code/PerceptronAPI/PerceptronAPI/Web.config
+++ b/Code/PerceptronAPI/PerceptronAPI/Web.config
@@ -37,7 +37,7 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-    <!--<sessionState mode="SQLServer" sqlConnectionString=" Integrated Security=SSPI;data source=CHIRAGH-II;" cookieless="UseCookies" cookieName="ASP.NET_SessionId"  regenerateExpiredSessionId="true" timeout="20"/>-->
+    <!--<sessionState mode="SQLServer" sqlConnectionString=" Integrated Security=SSPI;data source=CHIRAGH-I;" cookieless="UseCookies" cookieName="ASP.NET_SessionId"  regenerateExpiredSessionId="true" timeout="20"/>-->
   </system.web>
   <system.webServer>
     <!--Uploading File Size-->
@@ -97,7 +97,7 @@
   </entityFramework>
   <connectionStrings>
     
- <add name="PerceptronDatabaseEntities" connectionString="metadata=res://*/Models.PerceptronDatabase.csdl|res://*/Models.PerceptronDatabase.ssdl|res://*/Models.PerceptronDatabase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source******;initial catalog=PerceptronDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+ <add name="PerceptronDatabaseEntities" connectionString="metadata=res://*/Models.PerceptronDatabase.csdl|res://*/Models.PerceptronDatabase.ssdl|res://*/Models.PerceptronDatabase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CHIRAGH-I;initial catalog=PerceptronDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <system.webServer>
     <httpProtocol>
       <customHeaders>
