--- a/Code/PerceptronLocalService/PerceptronLocalService/App.config
+++ b/Code/PerceptronLocalService/PerceptronLocalService/App.config
@@ -25,19 +25,19 @@
   </entityFramework>
   <connectionStrings>
 
-    <add name="EcoliConnectionStringName" providerName="System.Data.SqlClient" connectionString="Data Source=*****;Initial Catalog=Ecoli;Integrated Security=True;MultipleActiveResultSets=True" />
-    <add name="EcoliDecoyConnectionStringName" providerName="System.Data.SqlClient" connectionString="Data Source=*****;Initial Catalog=EcoliDecoy;Integrated Security=True;MultipleActiveResultSets=True" />
+    <add name="EcoliConnectionStringName" providerName="System.Data.SqlClient" connectionString="Data Source=CHIRAGH-I;Initial Catalog=Ecoli;Integrated Security=True;MultipleActiveResultSets=True" />
+    <add name="EcoliDecoyConnectionStringName" providerName="System.Data.SqlClient" connectionString="Data Source=CHIRAGH-I;Initial Catalog=EcoliDecoy;Integrated Security=True;MultipleActiveResultSets=True" />
     
     
-    <add name="HumanConnectionStringName" providerName="System.Data.SqlClient" connectionString="Data Source=*****;Initial Catalog=Human;Integrated Security=True;MultipleActiveResultSets=True" />
-    <add name="HumanDecoyConnectionStringName" providerName="System.Data.SqlClient" connectionString="Data Source=*****;Initial Catalog=HumanDecoy;Integrated Security=True;MultipleActiveResultSets=True" />
+    <add name="HumanConnectionStringName" providerName="System.Data.SqlClient" connectionString="Data Source=CHIRAGH-I;Initial Catalog=Human;Integrated Security=True;MultipleActiveResultSets=True" />
+    <add name="HumanDecoyConnectionStringName" providerName="System.Data.SqlClient" connectionString="Data Source=CHIRAGH-I;Initial Catalog=HumanDecoy;Integrated Security=True;MultipleActiveResultSets=True" />
     
     
     
-    <add name="TrEMBLConnectionStringName" providerName="System.Data.SqlClient" connectionString="Data Source=*****;Initial Catalog=TrEMBL;Integrated Security=True;MultipleActiveResultSets=True" />
+    <add name="TrEMBLConnectionStringName" providerName="System.Data.SqlClient" connectionString="Data Source=CHIRAGH-I;Initial Catalog=TrEMBL;Integrated Security=True;MultipleActiveResultSets=True" />
     <!--FARHAN's TESTING -->
-    
-  <add name="PerceptronDatabaseEntities" connectionString="metadata=res://*/Models.PerceptronDatabase.csdl|res://*/Models.PerceptronDatabase.ssdl|res://*/Models.PerceptronDatabase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=*****;initial catalog=PerceptronDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+   
+<add name="PerceptronDatabaseEntities" connectionString="metadata=res://*/Models.PerceptronDatabase.csdl|res://*/Models.PerceptronDatabase.ssdl|res://*/Models.PerceptronDatabase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CHIRAGH-I;initial catalog=PerceptronDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
