--- a/Code/PerceptronLocalService/PerceptronCuda/PerceptronCuda.vcxproj
+++ b/Code/PerceptronLocalService/PerceptronCuda/PerceptronCuda.vcxproj
@@ -19,7 +19,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <CudaCompile Include="MassTunerGpu.cu" />
+    <CudaCompile Include="Initialization.cu" />
+    <CudaCompile Include="InsilicoSpectralComparisonGpu.cu" />
+    <CudaCompile Include="MassTunerAndPstCombinedGpu.cu" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CudaHeaderFile.cuh" />
+    <ClInclude Include="CudaHeaderForPst.cuh" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
@@ -79,9 +85,9 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <ExecutablePath>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.0\include;$(ExecutablePath)</ExecutablePath>
-    <IncludePath>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.0\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.0\lib\x64;$(LibraryPath)</LibraryPath>
+    <ExecutablePath>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v7.0\include;$(ExecutablePath)</ExecutablePath>
+    <IncludePath>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v7.0\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v7.0\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
