--- a/Code/PerceptronLocalService/PerceptronCuda/PerceptronCuda.vcxproj.filters
+++ b/Code/PerceptronLocalService/PerceptronCuda/PerceptronCuda.vcxproj.filters
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <CudaCompile Include="MassTunerGpu.cu" />
+    <ClInclude Include="CudaHeaderFile.cuh" />
+    <ClInclude Include="CudaHeaderForPst.cuh" />
+  </ItemGroup>
+  <ItemGroup>
+    <CudaCompile Include="MassTunerAndPstCombinedGpu.cu" />
+    <CudaCompile Include="InsilicoSpectralComparisonGpu.cu" />
+    <CudaCompile Include="Initialization.cu" />
   </ItemGroup>
 </Project>
